#52 Issue column content is not being wrapped up

--- a/assets/stylesheets/spent_time.css
+++ b/assets/stylesheets/spent_time.css
@@ -43,3 +43,19 @@ td.more_than_8_hours {
 input#time_entry_comments {
     width: 20%;
 }
+
+.centered {
+    text-align: center;
+}
+
+.subject { 
+    text-align: left;
+    white-space: pre-wrap; 
+    wordwrap: break-word;
+}
+
+.comments { 
+    text-align: left;
+    white-space: pre-wrap; 
+    wordwrap: break-word;
+}
